fix page-transition mobile

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -217,7 +217,7 @@ button[disabled=disabled], button:disabled {
     }
 
     &.active {
-        height: 160%;
+        height: 116%;
     }
 }
 
@@ -279,11 +279,21 @@ button[disabled=disabled], button:disabled {
     }
 }
 
-
+@media only screen and (max-width:1000px) {
+    .page-transition.active {
+        height: 140%;
+    }
+}
 
 @media only screen and (max-width:600px) {
     h1, .h1 {
         font-size: $giant-text * .6;
+    }
+}
+
+@media only screen and (max-width:500px) {
+    .page-transition.active {
+        height: 180%;
     }
 }
 
